Revert mobile browse detection

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -345,8 +345,8 @@
     </script> 
     <![endif]-->  
 
-    <!-- detect mobile browsers
-    <script src="assets/js/detectmobilebrowser.js"></script> -->
+    <!-- detect mobile browsers -->
+    <script src="assets/js/detectmobilebrowser.js"></script>
 
     <!-- owl carousel js -->
     <script src="assets/js/owl-carousel/owl.carousel.min.js"></script>
